--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -28,8 +28,8 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        password: ${{ secrets.SERVER_PASSWORD }}
+        username: 'musawhyne'
+        password: '1234'
         script: |
           cd /path/to/your/project
           git pull origin main
